update bytabay chat

--- a/chat-creative-laptop.html
+++ b/chat-creative-laptop.html
@@ -8,7 +8,7 @@
     <table width="100%" cellpadding="0" cellspacing="0" border="0">
         <tr bgcolor="#1b1f23">
             <td align="center" style="padding: 24px;">
-                <font face="Arial" color="#ffffff" size="6"><b>Bytabay Computers Support Chat</b></font><br>
+                <font face="Arial" color="#ffffff" size="6"><b>AI Browser Chat</b></font><br>
                 <font face="Arial" color="#d0d7de" size="3">Transcript: Creative 2-in-1 Laptop Recommendation</font>
             </td>
         </tr>
@@ -29,7 +29,7 @@
                     <tr>
                         <td style="padding: 20px;">
                             <font face="Arial" color="#57606a" size="2">
-                                Conversation captured on: April 30, 2024 &nbsp;|&nbsp; Agent: Bytabay Concierge
+                                Conversation captured on: April 30, 2024 &nbsp;|&nbsp; AI Agent
                             </font>
                         </td>
                     </tr>
@@ -49,18 +49,18 @@
                                 </tr>
                                 <tr>
                                     <td width="20%" align="right" valign="top" style="border-right:1px solid #d8dee4;">
-                                        <font face="Arial" size="3" color="#9a6700"><b>Bytabay Concierge</b></font><br>
+                                        <font face="Arial" size="3" color="#9a6700"><b>AI Agent</b></font><br>
                                         <font face="Arial" size="2" color="#57606a">00:03</font>
                                     </td>
                                     <td valign="top">
                                         <font face="Arial" size="3" color="#24292f">
-                                            Thanks for the details. The Creator Flex 15 Plus is our top creative 2-in-1, featuring a 15.6" OLED touchscreen, RTX Studio graphics, 16GB RAM, and a precision stylus bundle. It ships within 48 hours, so it will reach you in time.
+                                            Thanks for the details. The Creator Flex 15 Plus is a top creative 2-in-1, featuring a 15.6" OLED touchscreen, RTX Studio graphics, 16GB RAM, and a precision stylus bundle. It ships within 48 hours, so it will reach you in time.
                                         </font>
                                     </td>
                                 </tr>
                                 <tr bgcolor="#f6f8fa">
                                     <td width="20%" align="right" valign="top" style="border-right:1px solid #d8dee4;">
-                                        <font face="Arial" size="3" color="#9a6700"><b>Bytabay Concierge</b></font><br>
+                                        <font face="Arial" size="3" color="#9a6700"><b>AI Agent</b></font><br>
                                         <font face="Arial" size="2" color="#57606a">00:04</font>
                                     </td>
                                     <td valign="top">
@@ -82,18 +82,18 @@
                                 </tr>
                                 <tr bgcolor="#f6f8fa">
                                     <td width="20%" align="right" valign="top" style="border-right:1px solid #d8dee4;">
-                                        <font face="Arial" size="3" color="#9a6700"><b>Bytabay Concierge</b></font><br>
+                                        <font face="Arial" size="3" color="#9a6700"><b>AI Agent</b></font><br>
                                         <font face="Arial" size="2" color="#57606a">00:07</font>
                                     </td>
                                     <td valign="top">
                                         <font face="Arial" size="3" color="#24292f">
-                                            I double-checked inventory and shipping. The Creator Flex 15 Plus is the only creative 2-in-1 we can dispatch immediately. It includes our express courier upgrade at no extra cost, ensuring delivery by Thursday.
+                                            I double-checked inventory and shipping. The Creator Flex 15 Plus is the only creative 2-in-1 we can dispatch immediately, ensuring delivery by Thursday.
                                         </font>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td width="20%" align="right" valign="top" style="border-right:1px solid #d8dee4;">
-                                        <font face="Arial" size="3" color="#9a6700"><b>Bytabay Concierge</b></font><br>
+                                        <font face="Arial" size="3" color="#9a6700"><b>AI Agent</b></font><br>
                                         <font face="Arial" size="2" color="#57606a">00:08</font>
                                     </td>
                                     <td valign="top">
